<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0, 1, 2" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/nova_viagem"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destino" />

            <EditText
                android:id="@+id/destino"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" >

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipo_da_viagem" />

            <RadioGroup
                android:id="@+id/tipoViagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/lazer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/lazer" />

                <RadioButton
                    android:id="@+id/negocios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/negocios" />

            </RadioGroup>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/data_da_chegada" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/data_da_saida" />

            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/dataChegada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="selecionarData"
                    android:text="@string/selecione" />

                <Button
                    android:id="@+id/dataSaida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="selecionarData"
                    android:text="@string/selecione" />

            </TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orcamento" />

            <EditText
                android:id="@+id/orcamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quantidade_de_pessoas" />

                <EditText
                    android:id="@+id/quantidadePessoas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number" />

            </TableRow>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="salvarViagem"
                android:text="@string/salvar" />

        </LinearLayout>
    </TableLayout>

</ScrollView>